maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
def trouve_baggle(): Array[Int](2) = {
  for (i <- 0 to getMondeLargeur() - 1) {
    for (j <- 0 to getMondeHauteur() - 1) {
      if (aBiscuit(i,j) == true) {
        return [xb,yb]
      }
    }
  }
}

def marquer() {
  
}

override def run() {
  
}